src/app/index/header/header.component.scss
@import '../../../scss/mixins';

header {
  padding-top: 20px;
  padding-bottom: 20px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  transition: all linear 0.2s;
  z-index: 10;
  background-color: white;
  &.scrolled {
    // background-color: rgba(255, 255, 255, 0.8);
    background-color: white;
    padding-top: 13px;
    padding-bottom: 10px;
    z-index: 10;
    .logo {
      margin-top: 0;
      margin-bottom: -5px;
    }
  }
}

.app-content-block {
  display: flex;
  justify-content: space-between;
  align-items: center;
  &_right {
    width: 100%;
  }
}

.logo {
  cursor: pointer;
  float: left;
}

.header-menu {
  float: right;
  font-weight: bold;
  font-size: 12px;
  text-transform: uppercase;
  letter-spacing: 2px;
  color: #fefefe;
  &_list {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    align-items: baseline;
    height: 42px;

    @include b(500) {
      flex-wrap: wrap;
    }

    &_item {
      display: inline-block;
      line-height: 13px;
      padding: 0;
      &--login {
        display: flex;
        align-items: center;
        color: #fff !important;
        text-transform: none;
        margin-top: -4px;
        img {
          margin-left: 16px;
        }
        .header-link {
          color: #fff !important;
          font-size: 14px;
          line-height: 14px;
          padding-left: 0 !important;
        }
      }
      &.with-sublist {
        position: relative;
        visibility: visible;
        span {
          position: relative;
          z-index: 2;
        }

        &:after {
          content: '';
          border-width: 0 2px 2px 0;
          border-style: solid;
          border-color: rgba(255, 255, 255, 0.7);
          width: 4px;
          height: 4px;
          transform: rotate(45deg);
          position: absolute;
          right: 10px;
          top: 50%;
          margin-top: -6px;
        }
        &.opened-list {
          &:after {
            transform: rotate(-135deg);
          }
        }
      }
      .header-link {
        color: #000;
        text-decoration: none;
        display: inline-block;
        vertical-align: middle;
        padding: 9px 25px;
        cursor: pointer;
        &.is-social {
          max-width: 150px;
          overflow: hidden;
          text-overflow: ellipsis;
        }
        &:hover {
          text-decoration: underline;
        }
      }
    }
  }
}

.header-menu_sublist {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: absolute;
  right: 5px;
  border-radius: 3px;
  background: linear-gradient(0deg, #ffffff, #ffffff);
  border: 1px solid #f4f4f4;
  display: none;
  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.05);
  .opened-list & {
    display: block;
  }
  &_item {
    & + & {
      .sublist-link {
        border-top: 1px solid #f4f4f4;
      }
    }
  }
  .sublist-link {
    color: #000;
    padding: 15px 25px;
    display: block;
    cursor: pointer;
    &:hover {
      color: #4aa956;
      text-decoration: none;
    }
  }
}

.navbar-toggle {
  background: none;
  float: right;
  border: 0 none;
  display: none;
  padding: 10px 6px;
  cursor: pointer;
  margin-top: -5px;
  .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    border-radius: 1px;
    background-color: black;
    + .icon-bar {
      margin-top: 4px;
    }
  }
}

@media screen and (max-width: 800px) {
  .logo {
    margin-left: 10px;
  }
  header {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
    .app-content-block {
      padding-top: 3vw;
      padding-bottom: 3vw;
      position: relative;
      &:after {
        content: '';
        display: block;
        clear: both;
      }
    }
  }
  .header-menu {
    display: none;
    // background: rgba(56, 67, 84, 0.9);
    background: rgba(255, 255, 255, 0.9);
    position: absolute;
    left: 0;
    right: 0;
    top: 100%;
    &_sublist {
      left: 0;
      right: 0;
      // background: rgba(56, 67, 84, 0.9);
      background: rgba(255, 255, 255, 0.9);
      .sublist-link {
        padding-left: 35px;
      }
    }
    &_list {
      &_item {
        display: block;
        .header-link {
          padding-top: 15px;
          padding-bottom: 15px;
          display: block;
          max-width: initial;
          &.is-social {
            max-width: initial;
          }
          &:hover {
            text-decoration: none;
            // background-color: rgba(0, 0, 0, 0.4);
            background-color: rgba(255, 255, 255, 0.4);
          }
        }
      }
    }
    &.opened {
      display: block;
      float: left;
      width: 100%;
    }
  }
  .navbar-toggle {
    display: block;
  }
}
.header-warning {
  text-align: center;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  margin-bottom: -20px;
  line-height: 27px;
  padding: 10px;
  transition: all linear 0.2s;
  &_icon {
    margin-right: 10px;
    vertical-align: middle;
  }
  &_message {
    vertical-align: middle;
    color: #444;
    font-size: 14px;
  }
  header.scrolled & {
    margin-bottom: -10px;
  }
}



.language-select {
  //padding: 8px 0;
  margin-left: 10px;
  margin-right: 10px;
  //height: 54px;
  position: relative;
  z-index: 2;
  box-sizing: border-box;
  color: #4AA956;
  text-transform: initial;
  top: -2px;
  &-list {
    display: block;
    list-style-type: none;
    padding: 0;
    margin: 0;
    border: 1px solid #4AA956;
    box-sizing: border-box;
    border-radius: 4px;
    position: relative;
    cursor: pointer;
    background-color: #fff;
    &:after {
      content: '';
      display: block;
      width: 5px;
      height: 5px;
      border-width: 2px 2px 0 0;
      border-style: solid;
      border-color: #4AA956;
      transform: rotate(135deg);
      position: absolute;
      top: 14px;
      right: 11px;
      z-index: 2;
    }
    &:not(.opened) {
      &:hover {
        //background-color: #f0f0f0;
      }
    }

    li {
      padding: 0 10px 0 5px;
      height: 0;
      overflow: hidden;
      box-sizing: border-box;
      margin: 0;
      line-height: 24px;
      &:after {
        content: '';
        display: block;
        clear: both;
      }
      img {
        margin-right: 6px;
        float: left;
      }
      span {
        position: relative;
        top: 2px;
      }
      &.active {
        //padding-right: 30px;
        display: block;
        height: auto;
        padding-top: 8px;
        padding-bottom: 8px;
        overflow: hidden;
        position: relative;
        cursor: pointer;
        &:after {
          content: '';
          display: block;
          position: absolute;
          right: 0;
          top: 0;
          bottom: 0;
          width: 40px;
          z-index: 1;
          background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 15%, rgba(255,255,255,1) 100%);
          background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,1) 100%);
          background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 15%,rgba(255,255,255,1) 100%);
          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 );
          border-radius: 5px;
        }
        span {
          //display: none;
        }
      }
    }

    &.opened {
      &:after {
        transform: rotate(-45deg);
        top: 16px;
        z-index: 2;
      }
      li {
        height: auto;
        padding-top: 8px;
        padding-bottom: 8px;
        + li {
          border-top: 1px solid #ddd;
        }
      }
    }
    img {
      width: 24px;
      height: 24px;
    }
  }
}

